# integration-parallel

./: CMakeLists.txt
src/: integration.cpp  integration_parallel.cpp
